--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,7 +31,8 @@
             },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development",                
-                "ASPNETCORE_URLS": "http://localhost:5500"
+                "ASPNETCORE_URLS": "http://localhost:5500",
+                "LStoreData":"database/"
             },
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
